# ensai-2025

./: day1.py  day3.py
.github/workflows/: deploy_gender_api.yml
api/: api.py  pyproject.toml
hackernews/: Embeddings.ipynb  main.py  news.parquet  pyproject.toml  scrape.py  test_hackernews.py
hackernews/dbt_demo_ensai/: dbt_project.yml
hackernews/dbt_demo_ensai/models/: kpis.sql  ratio.sql  source.yaml
